bm: tiny distortion between 760 and 767 breakpoint fixed

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -23,12 +23,15 @@
 /* distortion between this viewports */
 @media (min-width: 760px) and (max-width: 767px) {
   .intro-box {
-    margin: 6rem 1rem 1rem 1rem;
+    margin: 8rem 1rem 1rem 1rem;
     height: fit-content!important;
   }
   .mask {
     position: relative;
     height: fit-content;
+  }
+  .view {
+    height: 840px !important;
   }
 }
 
